--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-watch": "^4.3.11",
     "loose-envify": "^1.3.1",
     "mocha": "^3.2.0",
+    "sassify": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
