--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "redux": "^3.6.0",
     "socket.io": "^1.7.3",
     "socket.io-redis": "^4.0.0"
   },
@@ -53,6 +50,10 @@
     "gulp-watch": "^4.3.11",
     "loose-envify": "^1.3.1",
     "mocha": "^3.2.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
     "sassify": "^2.0.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
