--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
+    "react-redux": "^5.0.3",
     "socket.io": "^1.7.3",
     "socket.io-redis": "^4.0.0"
   },
