--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babelify": "^7.3.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
     "chai": "^3.5.0",
